[tool.poetry]
name = "target-athena"
version = "1.4.1"
description = "`target-athena` is Singer tap for Athena, built with the Singer SDK."
authors = ["Julian Knight <cjk@rabidaudio.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
requests = "^2.25.1"
boto3 = "^1.17.64"
pyathena = "^2.2.0"
# singer-sdk = {path = "../sdk", develop = true}
singer-sdk = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
nose = "^1.3.7"
python-dotenv = "^0.21.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-athena = 'target_athena.target:cli'
